@@ -4,53 +4,38 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder; // ✅ FIX
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
+    private final JwtTokenProvider tokenProvider;
 
-    private final JwtTokenProvider provider;
-
-    public JwtAuthenticationFilter(JwtTokenProvider provider) {
-        this.provider = provider;
+    public JwtAuthenticationFilter(JwtTokenProvider tokenProvider) {
+        this.tokenProvider = tokenProvider;
     }
 
     @Override
-    protected void doFilterInternal(
-            HttpServletRequest request,
-            HttpServletResponse response,
-            FilterChain filterChain
-    ) throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+            throws ServletException, IOException {
+        String authHeader = request.getHeader("Authorization");
 
-        String header = request.getHeader("Authorization");
+        if (authHeader != null && authHeader.startsWith("Bearer ")) {
+            String token = authHeader.substring(7);
+            if (tokenProvider.validateToken(token)) {
+                String email = tokenProvider.getEmail(token);
+                String role = tokenProvider.getRole(token);
+                Long userId = tokenProvider.getUserId(token);
 
-        if (header != null && header.startsWith("Bearer ")) {
-            String token = header.substring(7);
-            try {
-                provider.validateToken(token);
-
-                Authentication auth =
-                        new UsernamePasswordAuthenticationToken(
-                                provider.getUserId(token),
-                                null,
-                                List.of(new SimpleGrantedAuthority(
-                                        "ROLE_" + provider.getRole(token)))
-                        );
-
-                // ✅ THIS LINE NOW COMPILES
+                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                        userId, null, Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role))
+                );
                 SecurityContextHolder.getContext().setAuthentication(auth);
-
-            } catch (Exception ignored) {
             }
         }
-
         filterChain.doFilter(request, response);
     }
 }
